Updated session admin dashboard UI for a modern, responsive design and added copyright/license notices ✅
📌 Revamped `SessionAdminServlet` HTML output with structured, responsive design and consistent styling. Added new CSS aligning with the auction system theme for tables, stats, and navigation bars. Improved session and user management views, including badges for admin/user roles, dynamic table updates, and error/success messages with icons. Enhanced responsiveness and accessibility. Added copyright notices to `SessionAdminServlet` output and `real-time-notifications.html` for compliance.

--- a/src/main/webapp/real-time-notifications.html
+++ b/src/main/webapp/real-time-notifications.html
@@ -8,6 +8,20 @@
     <link href="css/websocket-styles.css" rel="stylesheet">
 </head>
 <body>
+<!--
+    Auction Notification Dashboard
+    Copyright (c) 2025 Ishara Lakshitha. All rights reserved.
+
+    This software and associated documentation files (the "Software") are proprietary
+    and confidential to Ishara Lakshitha. Unauthorized copying, distribution, or use
+    of this Software, via any medium, is strictly prohibited without prior written
+    permission from the copyright holder.
+
+    Author: Ishara Lakshitha (@isharax9)
+    Project: AuctionSystem - BCD 1 Research Assignment
+    Created: June 2025
+-->
+
 <div class="container">
     <div class="nav-bar">
         <h1>
@@ -169,6 +183,20 @@
         </div>
     </div>
 </div>
+
+<!-- Footer Copyright -->
+<footer style="text-align: center; padding: 20px; margin-top: 40px; border-top: 1px solid #ddd; background-color: #f8f9fa;">
+    <div style="color: #666; font-size: 14px;">
+        <p>&copy; 2025 <strong>Ishara Lakshitha</strong>. All rights reserved.</p>
+        <p style="margin: 5px 0;">
+            <i class="fas fa-code"></i>
+            Developed by <a href="https://github.com/isharax9" target="_blank" style="color: #007bff; text-decoration: none;">@isharax9</a>
+        </p>
+        <p style="margin: 0; font-size: 12px; color: #888;">
+            AuctionSystem Notification Dashboard | BCD 1 Research Assignment
+        </p>
+    </div>
+</footer>
 
 <script src="js/auction-websocket.js"></script>
 </body>
